# BashUtils

./: .gitignore  README.md  pyproject.toml
cmdr/: __init__.py  check.py  entrypoint.py  file_utils.py  report.py  tether.py
cmdr/scripts/: slurm_wrangler.sh  tether.sh
scripts/: slurm_wrangler.sh
