[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cmdr"
authors = [
    {"name" = "Matthew R. Carbone", "email" = "mcarbone@bnl.gov"}
]
maintainers = [
    {"name" = "Matthew R. Carbone", "email" = "mcarbone@bnl.gov"}
]
description = "Command line utilities, mostly written in Python and Bash"
readme = "README.md"
requires-python = ">=3.9"
license = {"file" = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy",
    "rich"
]

# Dynamic version reads __version__ directly from my_package.__init__
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "coverage",
    "flake8",
    "pytest",
    "pytest-cov",
    "black",
    "nbstripout",
    "pre-commit",
]
doc = [
    "sphinx",
    "numpydoc",
    "sphinx-copybutton",
    "sphinx_rtd_theme",
    "ipython",
    "matplotlib"
]

[tool.setuptools]
packages = ["cmdr"]

[project.scripts]
cmdr = "cmdr.entrypoint:entrypoint"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs/source/conf.py
)/
'''
